update directory data

--- a/main.ipynb
+++ b/main.ipynb
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "train_features = pd.read_csv('train_features.csv')\n",
+    "train_features = pd.read_csv('data/train_features.csv')\n",
     "train_features.head()"
    ]
   },
@@ -2670,7 +2670,7 @@
     }
    ],
    "source": [
-    "df_test = pd.read_csv('test_features.csv')\n",
+    "df_test = pd.read_csv('data/test_features.csv')\n",
     "df_test.head()"
    ]
   },
