Refactored code for better readability

--- a/junk.ipynb
+++ b/junk.ipynb
@@ -201,6 +201,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_cols = df_mk_filtered.select_dtypes(include=['object']).columns\n",
+    "for i in cat_cols:\n",
+    "    print(f'{df_mk_filtered[i].value_counts()}')\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -219,7 +231,26 @@
     }
    ],
    "source": [
-    "df['jumlah_anak_balita'].value_counts()"
+    "def apply_custom_ordinal_encoding_mappings(df, default_value = 0):\n",
+    "    \n",
+    "    ordinal_encoding_columns_mappings = {\n",
+    "    \n",
+    "        'pendidikan': {'SMP': 1, 'SMA': 2, 'Sarjana': 3, 'Magister': 4, 'Doktor': 5},\n",
+    "        'status_pernikahan': {'Sendiri': 1, 'Rencana Menikah': 2, 'Menikah': 3, 'Cerai': 4, 'Cerai Mati': 5}\n",
+    "    }\n",
+    "    \n",
+    "    for col, mapping in ordinal_encoding_columns_mappings.items():\n",
+    "        \n",
+    "        if col in df.columns:\n",
+    "            \n",
+    "            df[col] = df[col].map(mapping).fillna(default_value)\n",
+    "        \n",
+    "    return df\n",
+    "\n",
+    "df_mk_filtered[cat_cols] = apply_custom_ordinal_encoding_mappings(df_mk_filtered[cat_cols])\n",
+    "for i in cat_cols:\n",
+    "    print(f'{df_mk_filtered[i].value_counts()}')\n",
+    "    print('\\n')\n"
    ]
   }
  ],
